# NOTE

./: .gitignore  download.bat  readme.md  upload.bat
Windows编译/: cl.md
dll/: dll基础.md
hys/: update.bat
hys/32asm/: 80x86系列处理器简史.md  MSAM变量.md  Windows的历史.md  var.bat  win32汇编程序结构.md  指令系统.md
hys/Windows编译/: makefile.md  vscode配置msvc.md
hys/Windows编译/nmake/: 特殊宏.md
hys/blender/: blender.md
hys/cmake/教程/: 命令.md
hys/cmake/教程/1/: 1.md
hys/cmake/教程/1/1/: CMakeLists.txt  (+2 more)
hys/cmake/教程/2/: 2.md
hys/cmake/教程/2/2/: CMakeLists.txt  main.cpp
hys/cpython/: patchlevel.h.md  pc_readme.md  pyconfig.h.md  python.h.md  python.h头文件.md
hys/c标准库/: assert.md  errno.md  limits.md  stddef.md  stdio.md  stdlib.h.md  string.md
hys/c预处理/: pragma.md
hys/numpy/: numpy大纲.md
hys/python_capi/: 使用 C 或 C++ 扩展 Python.md  概述.md
hys/python标准库/: itertools.md  time.md  内置函数.md  内置常量.md  内置类型.md
hys/python标准库/os/: os.md  uttil.py  基本信息.py  文件和目录.py  进程信息.py
hys/python标准库/pdb/: 基本命令.md
hys/python标准库/re/: 概述.md  正则语法.md
hys/python标准库/string/: 字符串常量.md  自定义字符串格式化.md
hys/python标准库/内置异常/: 具体异常.md  异常基类.md  异常层级.md
hys/python标准库/内置类型/: 上下文管理器类型.md  代码对象.md  序列类型.md  数字类型.md  模块类型.md  类型注解类型.md  迭代器和生成器类型.md  迭代器类型.md  逻辑值.md
hys/python进阶/: 1开场白.md  2万物皆对象.md  大纲.md
hys/toml/: toml简介.md
hys/yaml/: yaml简介.md  yaml语法与格式.md
hys/一注结构基础/: 微分学.md
hys/离散数学/: 命题等价式.md  复合命题.md  整除性和模算术.md
hys/资料/: Win32.chw
hys/逆向/: PE结构.md
hys/逆向/pe/: is_pe.c  makefile  util.py
hys/高数讲义/基础回顾/: 函数、图像和直线.md  基本概念.md
yb/: down.bat  up.bat
一注结构基础/: 空间解析几何.md
离散数学/: 整除性和模算术.md
(+1 files in other folders)
